no recordes found parameter

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -12,3 +12,5 @@
     - 'Added new component template and related articles component'
 1.0.6:
     - 'Added new component template new properties'
+1.0.7:
+  - 'No records found message'
