--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -8,3 +8,9 @@
     - update_table_pensoft_articles_article.php
 1.0.4:
     - 'Added Pagination to articles list'
+1.0.5:
+    - 'Added new component template and related articles component'
+1.0.6:
+    - 'Added new component template new properties'
+1.0.7:
+  - 'No records found message'
