News added checkbox/slider for internar/external;new template; edit link

--- a/models/article/fields.yaml
+++ b/models/article/fields.yaml
@@ -33,6 +33,11 @@ fields:
         span: right
         default: true
         type: switch
+    external:
+        label: 'Is external'
+        span: right
+        default: true
+        type: switch
     cover:
         label: Cover
         span: right
