--- a/models/article/fields.yaml
+++ b/models/article/fields.yaml
@@ -2,6 +2,7 @@ fields:
     title:
         label: Title
         span: left
+        required: 1
         type: text
     slug:
         label: Slug
@@ -19,6 +20,7 @@ fields:
         label: 'Published at'
         mode: datetime
         span: auto
+        required: 1
         type: datepicker
     keywords:
         label: Tags
@@ -40,14 +42,15 @@ fields:
         type: switch
     cover:
         label: Cover
-        span: right
         mode: image
+        imageWidth: '270'
         fileTypes: 'svg,png,jpg'
         useCaption: true
         thumbOptions:
             mode: crop
             extension: auto
-        imageWidth: '270'
+        span: right
+        required: 1
         type: fileupload
     type:
         label: Type
