--- a/models/article/fields.yaml
+++ b/models/article/fields.yaml
@@ -64,3 +64,7 @@ fields:
         label: URL
         span: left
         type: text
+    published:
+        label: 'Is published'
+        span: auto
+        type: switch
