--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -31,3 +31,6 @@
     - 'Backend requred fields'
 1.0.15:
     - 'New template 5'
+1.0.16:
+    - 'Updated table pensoft_articles_article'
+    - builder_table_update_pensoft_articles_article_2.php
