--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -36,3 +36,5 @@
     - builder_table_update_pensoft_articles_article_2.php
 1.0.17:
     - 'New template 5 for article highlights'
+1.0.18:
+    - 'Fixed template 5 for article highlights'
