--- a/models/article/fields.yaml
+++ b/models/article/fields.yaml
@@ -16,6 +16,11 @@ fields:
         size: large
         span: left
         type: richeditor
+    caption:
+        label: Caption
+        size: large
+        span: auto
+        type: richeditor
     published_at:
         label: 'Published at'
         mode: datetime
@@ -67,4 +72,5 @@ fields:
     published:
         label: 'Is published'
         span: auto
+        default: 1
         type: switch
