--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -24,7 +24,7 @@
 1.0.11:
     - 'News added checkbox/slider for internar/external'
 1.0.12:
-    - 'Fix'
+    - Fix
 1.0.13:
     - 'Published at'
 1.0.14:
@@ -38,3 +38,6 @@
     - 'New template 5 for article highlights'
 1.0.18:
     - 'Fixed template 5 for article highlights'
+1.0.19:
+    - 'Updated table pensoft_articles_article'
+    - builder_table_update_pensoft_articles_article_3.php
