--- a/models/article/columns.yaml
+++ b/models/article/columns.yaml
@@ -28,3 +28,9 @@ columns:
         label: Type
         type: partial
         path: $/pensoft/articles/partials/_type.htm
+    revisions:
+        type: partial
+        path: ~/plugins/pensoft/media/partials/_revision.htm
+        searchable: false
+        sortable: false
+        valueFrom: id
