--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -41,3 +41,5 @@
 1.0.19:
     - 'Updated table pensoft_articles_article'
     - builder_table_update_pensoft_articles_article_3.php
+1.0.20:
+    - 'Revision history'
