--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -75,6 +75,8 @@
     - 'Galleries related to articles fix NEW'
 1.0.34:
     - 'Created pivot table for galleries-articles'
-    - create_table_galleries_article_pivot.php
 1.0.35:
     - 'Galleries logic updated many-to-many relation'
+1.0.36:
+    - "Removed return when pensoft_media_galleries doesnt exist condition"
+    - create_table_galleries_article_pivot.php
