new template for articles list

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -91,3 +91,5 @@
     - 'Related articles link fix'
 1.0.41:
     - 'templete 6 addded for highlights'
+1.0.42:
+    - 'templete 6 addded for article list'
