--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -102,3 +102,5 @@
 1.0.45:
     - 'Create category article pivot table'
     - builder_table_create_pensoft_aticles_article_category_pivot.php
+1.0.46:
+    - 'Added templete 6 for homepage highlights'
