--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -111,3 +111,5 @@
     - builder_table_update_pensoft_articles_article_5.php
 1.0.49:
     - 'Removed gallery field'
+1.0.50:
+    - 'Skip mandatory fields if is_published is off'
