--- a/models/article/fields.yaml
+++ b/models/article/fields.yaml
@@ -16,6 +16,10 @@ fields:
         size: large
         span: left
         type: richeditor
+    label:
+        label: 'Label'
+        span: auto
+        type: text
     caption:
         label: Caption
         size: large
